Improve spacing for Android promo in Tablet size Bug 1046251

--- a/media/css/firefox/sync.less
+++ b/media/css/firefox/sync.less
@@ -424,6 +424,10 @@ html[dir="rtl"] {
         header {
             .span_narrow(6);
             .offset_narrow(2);
+            h3,
+            .sync-button {
+                margin-left: 20px;
+            }
         }
         aside {
             .span_narrow(4);
